--- a/Case3MessengerBackend/appsettings.json
+++ b/Case3MessengerBackend/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=case2;Username=postgres;Password=sa"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJwtTokenSigning1234412321",
+    "Issuer": "Case3MessengerBackend",
+    "Audience": "MyAppClient"
+  }
+
 }
